--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9.39.1",
     "nuxt": "4.2.1",
     "nuxt-auth-utils": "^0.5.25",
+    "nuxt-directus": "^5.7.0",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
