--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/hugeicons": "^1.2.16",
     "@iconify-json/lucide": "^1.2.68",
     "date-fns": "^4.1.0",
