--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@nuxt/fonts": "^0.12.1",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^2.0.0",
-    "@nuxt/ui": "^4.0.0",
+    "@nuxt/ui": "^4.3.0",
     "@nuxtjs/i18n": "^10.2.0",
     "@vueuse/motion": "^3.0.3",
     "@vueuse/nuxt": "^14.0.0",
@@ -32,7 +32,8 @@
     "nuxt-auth-utils": "^0.5.25",
     "nuxt-directus": "^5.7.0",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.3",
