--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:stylelint": "stylelint \"**/*.{css,scss}\" --config .config/stylelint.json"
   },
   "dependencies": {
+    "@date-fns/utc": "^2.1.1",
     "@directus/sdk": "^20.1.1",
     "@nuxt/eslint": "^1.10.0",
     "@nuxt/fonts": "^0.12.1",
@@ -26,6 +27,8 @@
     "@vueuse/motion": "^3.0.3",
     "@vueuse/nuxt": "^14.0.0",
     "bcryptjs": "^3.0.3",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.1",
     "nuxt": "4.2.1",
@@ -39,7 +42,6 @@
     "@iconify-json/heroicons": "^1.2.3",
     "@iconify-json/hugeicons": "^1.2.16",
     "@iconify-json/lucide": "^1.2.68",
-    "date-fns": "^4.1.0",
     "tsx": "^4.19.1"
   }
 }
